Crash in [@ mozilla::dom::indexedDB::AsyncDeleteFile]
Categories
(Core :: Storage: IndexedDB, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | fixed |
| firefox68 | --- | fixed |
People
(Reporter: calixte, Assigned: janv)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-468542c1-90d1-4927-a6cd-1acf90190310.
Top 10 frames of crashing thread:
0 XUL mozilla::dom::indexedDB::AsyncDeleteFile dom/indexedDB/ActorsParent.cpp:15765
1 XUL mozilla::dom::indexedDB::FileInfo::UpdateReferences dom/indexedDB/FileInfo.cpp:167
2 XUL mozilla::dom::indexedDB:: dom/indexedDB/FileInfo.h:37
3 XUL mozilla::dom::indexedDB:: dom/indexedDB/ActorsParent.cpp:5967
4 XUL mozilla::dom::indexedDB::PBackgroundIDBDatabaseParent::DeallocSubtree ipc/ipdl/PBackgroundIDBDatabaseParent.cpp:740
5 XUL mozilla::dom::indexedDB::PBackgroundIDBFactoryParent::DeallocSubtree ipc/ipdl/PBackgroundIDBFactoryParent.cpp:354
6 XUL mozilla::ipc::PBackgroundParent::DeallocSubtree ipc/ipdl/PBackgroundParent.cpp:4302
7 XUL mozilla::ipc::PBackgroundParent::OnChannelError ipc/ipdl/PBackgroundParent.cpp:3765
8 XUL mozilla::detail::RunnableMethodImpl<mozilla::ipc::MessageChannel*, void xpcom/threads/nsThreadUtils.h:1122
9 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1179
There is 1 crash in nightly 67 with buildid 20190310095404. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1526891.
[1] https://hg.mozilla.org/mozilla-central/rev?node=c8434f83fb59
| Assignee | ||
Updated•6 years ago
|
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Well, the crash volume seems to be low, so the priority has been lowered to P2.
I have some P1s that need to be fixed for 67, then I get back to this bug.
Anyway, I still believe this bug will get fixed in time for uplift to 67.
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 9053736 [details]
Bug 1534202 - Don't schedule a file deletion after quota client shutdown; r=asuth
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1526891
- User impact if declined: Users experience crashes. However the volume is not very high.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Minimal patch, verified on Nightly, covered by tests and we are still quite early in the cycle.
- String changes made/needed: None
| Assignee | ||
Comment 8•6 years ago
|
||
Looks good, doesn't happen on Nightly anymore.
Comment 9•6 years ago
|
||
Comment on attachment 9053736 [details]
Bug 1534202 - Don't schedule a file deletion after quota client shutdown; r=asuth
Crash fix, minimal patch, uplift approved for 67 beta 8, thanks.
Comment 10•6 years ago
|
||
| bugherder uplift | ||
Description
•