Bug 1534202 - Don't schedule a file deletion after quota client shutdown; r=asuth a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D24970